# TuParles

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  TODO.md  install.sh  phrasepack.example.json  pyproject.toml  vocab.example.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
android/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/schemas/pl.nech.tuparles.data.AppDatabase/: 4.json
android/app/src/androidTest/java/pl/nech/tuparles/: DomovoySyncSerializationTest.kt  PipelineInstrumentedTest.kt  TakesStoreIoTest.kt  TakesStoreSerializationTest.kt
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/pl/nech/domovoy/analytics/: DomovoyAnalytics.kt  DomovoyAnalyticsConfig.kt  DomovoyAnalyticsEvent.kt  DomovoyAnalyticsSink.kt
android/app/src/main/java/pl/nech/tuparles/: Audio.kt  DebugLog.kt  Dictation.kt  DictationService.kt  DomovoySync.kt  Engine.kt  HistoryActivity.kt  MainActivity.kt  Models.kt  Prompts.kt  ScratchpadActivity.kt  Settings.kt  SettingsActivity.kt  TakesStore.kt  Text.kt  TuParlesApp.kt  TuParlesIme.kt  TuParlesRecognitionService.kt  TuParlesWidget.kt
android/app/src/main/java/pl/nech/tuparles/core/: Contracts.kt  DecodeGate.kt  NoopTranscriptionEngine.kt  WhisperTranscriptionEngine.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/layout/: widget_tuparles.xml
android/app/src/main/res/mipmap/: ic_launcher.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: file_paths.xml  method.xml  recognition_service.xml  widget_info.xml
android/app/src/test/java/pl/nech/tuparles/: TextTest.kt
android/gradle/: libs.versions.toml
android/play-listing/: listing-fr.md
android/scripts/: fetch-android-model.sh
android/whisper/: build.gradle.kts
android/whisper/src/main/java/com/whispercpp/whisper/: LibWhisper.kt
android/whisper/src/main/jni/whisper/: CMakeLists.txt  jni.c
docs/: CROSS_ENV.md  spike-backend.md
docs/research/: 2026-06-23-audio-capture-linux.md  2026-06-23-codeswitch-eval.md  2026-06-23-diarization-sota.md  2026-06-23-genspark-speakly-deep-dive.md  2026-06-23-granola-deep-dive.md  2026-06-23-local-llm-summarization.md  2026-06-23-meeting-notes-commercial-landscape.md  2026-06-23-voice-commands-design.md  2026-06-23-voice-ui-command-control.md  2026-06-24-codebase-aware-dict-seeding-eda.md  2026-06-24-comment-tu-parles-onboarding.md  2026-06-24-granola-bridge-in-out.md  2026-06-24-local-pii-firewall.md  2026-06-24-real-take-error-taxonomy.md  2026-06-24-roundtable-name-binding-eval-privacy.md  2026-06-24-roundtable-speaker-id.md  2026-06-25-transliteration-forensics.md  2026-06-26-cpu-partials-and-colour-contract.md  2026-06-27-android-packaging-strategy.md  2026-06-27-android-platform-privacy.md  2026-06-27-android-stt-engines-adversarial-review.md  2026-06-27-android-stt-engines.md  2026-06-27-cross-env-capability-layers.md  2026-06-27-portable-core-audit.md  2026-06-27-the-honest-face.md  2026-06-27-ux-reflection-flow.md  2026-06-28-cpu-engine-gradient-and-stt-api.md  2026-06-28-spoken-slash-commands.md  2026-06-28-stt-host-decision.md  2026-06-28-ui-architecture-decisions.md  2026-07-08-cpu-asr-sota-and-decode-review.md  2026-07-11-audio-preprocess-silence-trim.md  2026-07-11-preview-window-ux-review.md  2026-07-17-android-dictaphone-rebuild-design.md  2026-07-17-android-live-partials.md  2026-07-22-android-model-bench.md  2026-07-23-android-lean-apk-design.md  2026-07-23-android-rolling-transcript-design.md  README.md  SOURCES.md
docs/research/data/: 2026-06-24-nlp-eda-embed.json  2026-06-24-nlp-eda.json
notebooks/: dictseed_eda.ipynb
packaging/: tuparles.desktop.in
packaging/gnome-extension/focuswindow@tuparles.local/: extension.js  metadata.json
scripts/: app_icon.py  bench_cpu_stt.py  bench_responsiveness.py  gen_codeswitch_wavs.py  install_desktop.sh  measure_seed_ablation.py  nlp_eda.py  readme_screens.py  render_ab_diff.py  replay_takes.py  review_takes.py  score_transcript_entities.py  setup_wayland.sh
src/tuparles/: __init__.py  audio.py  bugreport.py  capability.py  casing.py  cheatsheet.py  cli.py  commands.py  config.py  daemon.py  delivery.py  engine.py  eval.py  history.py  hotkey.py  languages.py  lexicon.py  onboarding.py  partials.py  pipeline.py  privacy_policy.py  punctuation.py  quickchat.py  repeats.py  seed_prompt.py  settings.py  settings_ui.py  syntax.py  takes.py  tray.py  ui.py  update_check.py  vocab.py  whatsnew.py
src/tuparles/data/: __init__.py  postprocess-data.json  postprocess.py
src/tuparles/nlp/: crawl.py  features.py  parse.py  signals.py  sources.py
src/tuparles/nlp/engines/: cluster.py  keywords.py
src/tuparles/privacy/: __init__.py  denylist.py  floor.py  secrets.py  structured.py
src/tuparles/syntax_features/: __init__.py  quotes.py
src/tuparles/telemetry/: __init__.py  dashboard.py  introspect.py  readout.py
tasks/: completed_archive.json
tests/: test_audio_devices.py  test_audio_level.py  test_bubble_screen.py  test_bugreport.py  test_capability.py  test_caps.py  test_carryover.py  test_casing.py  test_cheatsheet.py  test_cli.py  test_codeswitch_corpus.py  test_codeswitch_eval.py  test_commands.py  test_config_core.py  test_core_boundary.py  test_cpu_partials.py  test_daemon_finish.py  test_delivery.py  test_engine_lang.py  test_engine_resilience.py  test_engine_whispercpp.py  test_eval.py  test_filetranscribe.py  test_history.py  test_hotkey.py  test_languages.py  test_lexicon.py  test_mapping_canary.py  test_nlp.py  test_onboarding.py  test_partials.py  test_partials_sanity.py  test_pii_eval.py  test_postprocess_data.py  test_preprocess.py  test_preview.py  test_privacy.py  test_privacy_policy.py  test_punctuation.py  test_queue_chips.py  (+22 more)
tests/data/codeswitch/: corpus.json
tests/data/pii/: corpus.json
(+69 files in other folders)
