[tool.poetry]
name = "tuparles"
version = "0.1.0"
description = "Local push-to-talk dictation for Fr-En code-switchers. Speak, see, ship."
authors = ["PLNech <PLNech@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "tuparles", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
sounddevice = "^0.5"
numpy = "^2.0"
pynput = "^1.7"
faster-whisper = "^1.2.1"
nvidia-cublas-cu12 = "^12.9.2.10"
nvidia-cudnn-cu12 = "^9.23.1.3"
pyside6-essentials = "^6.11.1"
evdev = "^1.9.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.9"

[tool.poetry.scripts]
tuparles = "tuparles.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
