[tool.poetry]
name = "tuparles"
version = "0.1.0"
description = "Local push-to-talk dictation for Fr-En code-switchers. Speak, see, ship."
authors = ["PLNech <PLNech@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "tuparles", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
sounddevice = "^0.5"
numpy = "^2.0"
pynput = "^1.7"
faster-whisper = "^1.2.1"
nvidia-cublas-cu12 = "^12.9.2.10"
nvidia-cudnn-cu12 = "^9.23.1.3"
pyside6-essentials = "^6.11.1"
evdev = "^1.9.3"
python-stdnum = "^2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.9"
mypy = "^2.1.0"
pytest-cov = "^7.1.0"
pre-commit = "^4.6.0"

# Light, portable NLP deps — pure-python / cross-OS wheels, safe in the CI
# matrix. The corpus-analysis core (nlp/) needs these.
[tool.poetry.group.nlp.dependencies]
markdown-it-py = "^4.2.0"
scikit-learn = "^1.9.0"
yake = "^0.7.3"

# Heavy / platform-fragile embedding backends (onnxruntime, torch). NOT
# installed in CI — they'd blow up the cross-OS matrix and aren't needed for
# the portable suite. Opt in locally with `poetry install --with embed`.
[tool.poetry.group.embed]
optional = true

[tool.poetry.group.embed.dependencies]
fastembed = "^0.8.0"
sentence-transformers = "^5.6.0"

[tool.poetry.scripts]
tuparles = "tuparles.cli:main"

[tool.pytest.ini_options]
# `gpu` needs a CUDA device + WAVs; `embed` needs the optional embed group.
# Both deselected by default so the pure-python suite stays CI-portable.
# Run them with `pytest -m gpu` / `pytest -m embed`.
addopts = "-m 'not gpu and not embed' --cov=tuparles --cov-report=term-missing"
markers = [
    "gpu: requires a CUDA device and generated fixtures (the code-switch eval)",
    "embed: requires the optional 'embed' group (fastembed / sentence-transformers)",
]

[tool.coverage.run]
source = ["tuparles"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
# Soft for now — visibility before a hard floor. Raise `fail_under` once the
# new nlp/ engines settle and we know the honest baseline.

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# Beyond the default E/F/W: import-sorting (I), bugbear (B), pyupgrade (UP),
# simplify (SIM), comprehensions (C4), Ruff's own (RUF).
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4", "RUF"]
ignore = [
    "E501",  # line length is the formatter's job (long comments/URLs/strings)
    # Ambiguous-unicode warnings are false friends here: this is a bilingual,
    # French-typography project that *deliberately* uses « », ×, ’, narrow
    # no-break spaces. Flagging them every time costs more than it catches.
    "RUF001", "RUF002", "RUF003",
    # try/except/pass is a deliberate, commented fire-and-forget pattern in the
    # daemon/delivery cosmetics; contextlib.suppress wouldn't read clearer.
    "SIM105",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]  # tests sometimes import after sys.path / marker setup

[tool.mypy]
python_version = "3.11"
# TuParles deploys only on Linux/Unix (fcntl single-instance lock, evdev hotkey,
# X11/Wayland). Type-check for that target on every runner, so the cross-OS CI
# matrix (which exists for the pure-python *runtime*) doesn't flag fcntl.flock as
# missing on the Windows/macos cells.
platform = "linux"
files = ["src/tuparles"]
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
# Third-party libs ship without stubs (fastembed, yake, sklearn, markdown_it,
# faster_whisper, sounddevice, pynput, evdev, PySide6...). Don't fail on them.
ignore_missing_imports = true

# Grandfather the Qt frontend: PySide6's unscoped-enum access (Qt.AlignLeft,
# QPainter.Antialiasing...) is correct at runtime but mypy can't resolve it.
# Type-cleaning the UI layer is its own task; don't block CI on known noise.
[[tool.mypy.overrides]]
module = ["tuparles.tray", "tuparles.ui", "tuparles.settings_ui"]
disable_error_code = ["attr-defined"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
