# Monorepo dev workspace — NOT a distributable package itself (package-mode = false).
# The two shipped distributions live under packages/: tuparles-core (portable) and
# tuparles (desktop). This root wires both as editable path deps and owns the shared
# dev/test toolchain + tool config, so `poetry install [--with nlp|embed]`, pytest,
# ruff and mypy all run unchanged from the repo root over the whole tree.
# See docs/research/2026-06-28-ui-architecture-decisions.md §2/§4 (step 5).
[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
# Desktop pulls tuparles-core transitively (its own path dep, develop=true), so a
# single root install yields both distributions editable in the shared namespace.
tuparles = { path = "packages/tuparles-desktop", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.9"
mypy = "^2.1.0"
pytest-cov = "^7.1.0"
pre-commit = "^4.6.0"

# Light, portable NLP deps — pure-python / cross-OS wheels, safe in the CI
# matrix. The corpus-analysis layer (tuparles/nlp/, desktop side) needs these;
# they live here because the unified test suite at the repo root consumes them.
[tool.poetry.group.nlp.dependencies]
markdown-it-py = "^4.2.0"
scikit-learn = "^1.9.0"
yake = "^0.7.3"

# Heavy / platform-fragile embedding backends (onnxruntime, torch). NOT
# installed in CI — they'd blow up the cross-OS matrix and aren't needed for
# the portable suite. Opt in locally with `poetry install --with embed`.
[tool.poetry.group.embed]
optional = true

[tool.poetry.group.embed.dependencies]
fastembed = "^0.8.0"
sentence-transformers = "^5.6.0"

# The whisper.cpp CPU rung (#4): native build, opt-in for the dev/bench env here
# (the desktop dist carries it as its own optional group for end users). Install
# with `poetry install --with whispercpp` to run the CPU bench / the engine tests.
[tool.poetry.group.whispercpp]
optional = true

[tool.poetry.group.whispercpp.dependencies]
pywhispercpp = ">=1.2"

[tool.pytest.ini_options]
# `gpu` needs a CUDA device + WAVs; `embed` needs the optional embed group.
# Both deselected by default so the pure-python suite stays CI-portable.
# Run them with `pytest -m gpu` / `pytest -m embed`.
addopts = "-m 'not gpu and not embed and not whispercpp' --cov=tuparles --cov-report=term-missing"
markers = [
    "gpu: requires a CUDA device and generated fixtures (the code-switch eval)",
    "embed: requires the optional 'embed' group (fastembed / sentence-transformers)",
    "whispercpp: requires the optional 'whispercpp' group (pywhispercpp + ggml weights)",
]

[tool.coverage.run]
source = ["tuparles"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
# Soft for now — visibility before a hard floor. Raise `fail_under` once the
# new nlp/ engines settle and we know the honest baseline.

[tool.ruff]
line-length = 88
target-version = "py311"
# The two distributions' source roots, so ruff classifies `tuparles` as
# first-party for import-sorting despite the packages/*/src layout.
src = ["packages/tuparles-core/src", "packages/tuparles-desktop/src", "tests"]

[tool.ruff.lint.isort]
known-first-party = ["tuparles"]

[tool.ruff.lint]
# Beyond the default E/F/W: import-sorting (I), bugbear (B), pyupgrade (UP),
# simplify (SIM), comprehensions (C4), Ruff's own (RUF).
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4", "RUF"]
ignore = [
    "E501",  # line length is the formatter's job (long comments/URLs/strings)
    # Ambiguous-unicode warnings are false friends here: this is a bilingual,
    # French-typography project that *deliberately* uses « », ×, ’, narrow
    # no-break spaces. Flagging them every time costs more than it catches.
    "RUF001", "RUF002", "RUF003",
    # try/except/pass is a deliberate, commented fire-and-forget pattern in the
    # daemon/delivery cosmetics; contextlib.suppress wouldn't read clearer.
    "SIM105",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]  # tests sometimes import after sys.path / marker setup

[tool.mypy]
# No hardcoded python_version: mypy then matches the interpreter it runs under,
# so the 3.12 CI cell can parse numpy's 3.12-only `type` statements in its stub
# (a fixed 3.11 target choked on them). The 3.11 matrix cell still enforces the
# 3.11 minimum-supported floor.
# TuParles deploys only on Linux/Unix (fcntl single-instance lock, evdev hotkey,
# X11/Wayland). Type-check for that target on every runner, so the cross-OS CI
# matrix (which exists for the pure-python *runtime*) doesn't flag fcntl.flock as
# missing on the Windows/macos cells.
platform = "linux"
files = ["packages/tuparles-core/src/tuparles", "packages/tuparles-desktop/src/tuparles"]
# The split distributions share the `tuparles` PEP 420 namespace from two src
# roots; tell mypy those are the package bases so it maps files to `tuparles.*`
# module names (else the per-module overrides below stop matching).
mypy_path = ["packages/tuparles-core/src", "packages/tuparles-desktop/src"]
namespace_packages = true
explicit_package_bases = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
# Third-party libs ship without stubs (fastembed, yake, sklearn, markdown_it,
# faster_whisper, sounddevice, pynput, evdev, PySide6...). Don't fail on them.
ignore_missing_imports = true

# Grandfather the Qt frontend: PySide6's unscoped-enum access (Qt.AlignLeft,
# QPainter.Antialiasing...) is correct at runtime but mypy can't resolve it.
# Type-cleaning the UI layer is its own task; don't block CI on known noise.
[[tool.mypy.overrides]]
module = ["tuparles.tray", "tuparles.ui", "tuparles.settings_ui"]
disable_error_code = ["attr-defined"]
